# cloud-twin

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-lite.yml  publish.yml
cli/: main.py
cli/commands/: server.py  terraform.py
config/: bedrock-test.json  cloudtwin.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/layout/: Layout.tsx  Sidebar.tsx
dashboard/src/components/shared/: Badge.tsx  EmptyState.tsx  ErrorBanner.tsx  PageHeader.tsx  RefreshButton.tsx  ResourceTable.tsx  Spinner.tsx  StatCard.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: EventLog.tsx  Overview.tsx
dashboard/src/pages/aws/: S3.tsx  SES.tsx  SNS.tsx  SQS.tsx
dashboard/src/pages/azure/: Blob.tsx  ServiceBus.tsx
dashboard/src/pages/gcp/: PubSub.tsx  Storage.tsx
dashboard/static/: index.html
dashboard/static/js/: api.js  components.js  main.js  router.js  utils.js
dashboard/static/js/pages/: aws-bedrock.js  aws-dynamodb.js  aws-lambda.js  aws-s3.js  aws-secretsmanager.js  aws-ses.js  aws-sns.js  aws-sqs.js  azure-blob.js  azure-eventgrid.js  azure-functions.js  azure-keyvault.js  azure-queue.js  azure-servicebus.js  events.js  gcp-cloudfunctions.js  gcp-cloudtasks.js  gcp-firestore.js  gcp-pubsub.js  gcp-secretmanager.js  gcp-storage.js  overview.js
docker/: Dockerfile  Dockerfile.lite
docs/: developer-guide.md
rust/cloudtwin-lite/: Cargo.toml
rust/cloudtwin-lite/src/: config.rs  dashboard.rs  db.rs  main.rs  proto.rs  telemetry.rs
rust/cloudtwin-lite/src/aws/: mod.rs
rust/cloudtwin-lite/src/aws/bedrock/: config.rs  generator.rs  handlers.rs  mod.rs  scenario_engine.rs  state.rs  streaming.rs
rust/cloudtwin-lite/src/aws/dynamodb/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/aws/s3/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/aws/secretsmanager/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/aws/ses/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/aws/sns/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/aws/sqs/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/azure/: mod.rs
rust/cloudtwin-lite/src/azure/blob/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/azure/servicebus/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/gcp/: mod.rs
rust/cloudtwin-lite/src/gcp/pubsub/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/gcp/storage/: handlers.rs  mod.rs  models.rs  service.rs
rust/cloudtwin-lite/src/s3/: handlers.rs  mod.rs  models.rs  service.rs
scripts/: demo.py
src/cloudtwin/: __init__.py  __main__.py  app.py  config.py
src/cloudtwin/api/: __init__.py
src/cloudtwin/api/dashboard/: __init__.py  events.py  health.py
src/cloudtwin/api/dashboard/aws/: __init__.py  bedrock.py  dynamodb.py  lambda_.py  s3.py  secretsmanager.py  ses.py  sns.py  sqs.py
src/cloudtwin/api/dashboard/azure/: __init__.py  blob.py  eventgrid.py  functions.py  keyvault.py  queue.py  servicebus.py
src/cloudtwin/api/dashboard/gcp/: __init__.py  cloudfunctions.py  cloudtasks.py  firestore.py  pubsub.py  secretmanager.py  storage.py
src/cloudtwin/core/: errors.py  routing.py  telemetry.py  xml.py
src/cloudtwin/persistence/: db.py
src/cloudtwin/persistence/models/: __init__.py
src/cloudtwin/persistence/models/aws/: __init__.py  dynamodb.py  lambda_.py  s3.py  secretsmanager.py  ses.py  sns.py  sqs.py
src/cloudtwin/persistence/models/azure/: __init__.py  blob.py  eventgrid.py  functions.py  keyvault.py  queue.py  servicebus.py
src/cloudtwin/persistence/models/common/: __init__.py  events.py
src/cloudtwin/persistence/models/gcp/: __init__.py  cloudfunctions.py  cloudtasks.py  firestore.py  pubsub.py  secretmanager.py  storage.py
src/cloudtwin/persistence/repositories/: __init__.py
src/cloudtwin/persistence/repositories/aws/: __init__.py
src/cloudtwin/persistence/repositories/azure/: __init__.py
src/cloudtwin/persistence/repositories/common/: __init__.py
src/cloudtwin/persistence/repositories/gcp/: __init__.py
src/cloudtwin/providers/aws/: provider.py
src/cloudtwin/providers/aws/bedrock/: __init__.py  generator.py  handlers.py  models.py  scenario_engine.py  state.py  streaming.py
src/cloudtwin/providers/aws/dynamodb/: __init__.py  handlers.py  service.py
src/cloudtwin/providers/aws/lambda_/: __init__.py  handlers.py  service.py
src/cloudtwin/providers/aws/protocols/: json_protocol.py  query.py
src/cloudtwin/providers/aws/s3/: __init__.py  handlers.py  service.py
src/cloudtwin/providers/aws/secretsmanager/: __init__.py  handlers.py  service.py
src/cloudtwin/providers/aws/ses/: __init__.py  handlers.py  handlers_v2.py  service.py  smtp.py
src/cloudtwin/providers/aws/sns/: __init__.py  handlers.py  service.py
src/cloudtwin/providers/aws/sqs/: __init__.py  handlers.py  service.py
src/cloudtwin/providers/azure/: provider.py
src/cloudtwin/providers/gcp/: provider.py
tests/: conftest.py
tests/integration/dashboard/: conftest.py  test_azure_dashboard.py  test_bedrock_dashboard.py  test_dynamodb_dashboard.py  test_gcp_dashboard.py  test_lambda_dashboard.py  test_secretsmanager_dashboard.py
tests/integration/providers/aws/: conftest.py  test_bedrock_boto3.py  test_dynamodb_boto3.py  test_lambda_boto3.py  test_s3_boto3.py  test_secretsmanager_boto3.py  test_ses_boto3.py  test_sesv2_boto3.py  test_sns_boto3.py  test_sqs_boto3.py
tests/integration/providers/azure/: conftest.py  test_blob_sdk.py  test_eventgrid_http.py  test_functions_http.py  test_keyvault_http.py  test_queue_http.py  test_servicebus_http.py
tests/integration/providers/gcp/: conftest.py  test_cloudfunctions_http.py  test_cloudtasks_http.py  test_firestore_http.py  test_pubsub_sdk.py  test_secretmanager_http.py  test_storage_sdk.py
(+116 files in other folders)
