[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudtwin"
version = "0.1.0"
description = "Lightweight self-contained multi-cloud local runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "boto3>=1.34",
    "ruff>=0.4",
    # Azure SDKs (integration tests)
    "azure-storage-blob>=12.19",
    "azure-servicebus>=7.12",
    # GCP SDKs (integration tests)
    "google-cloud-storage>=2.16",
    "google-cloud-pubsub>=2.21",
]

[project.scripts]
cloudtwin = "cloudtwin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudtwin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
