[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudtwin"
version = "0.1.0"
description = "Lightweight self-contained multi-cloud local runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "aiosqlite>=0.22.1",
    "pyyaml>=6.0.3",
    "aiosmtplib>=5.1.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "boto3>=1.42.59",
    "ruff>=0.4",
    "black>=24.1",
    "isort>=5.12",
    # Azure SDKs (integration tests)
    "azure-storage-blob>=12.19",
    "azure-servicebus>=7.12",
    # GCP SDKs (integration tests)
    "google-cloud-storage>=2.16",
    "google-cloud-pubsub>=2.21",
]

[project.scripts]
cloudtwin = "cloudtwin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudtwin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvicorn.*",
]


[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true
exclude = '''
/(\.venv|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cloudtwin"]
src_paths = ["src"]
