[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudtwin"
version = "0.3.1"
description = "Lightweight self-contained multi-cloud local runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "aiosqlite>=0.22.1",
    "pyyaml>=6.0.3",
    "aiosmtplib>=5.1.0",
    "python-multipart>=0.0.22",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "boto3>=1.42.59",
    "ruff>=0.4",
    "black>=24.1",
    "isort>=5.12",
    "pre-commit>=3.4",
    # Azure SDKs (integration tests)
    "azure-storage-blob>=12.19",
    "azure-servicebus>=7.12",
    # GCP SDKs (integration tests)
    "google-cloud-storage>=2.16",
    "google-cloud-pubsub>=2.21",
]

[project.scripts]
cloudtwin     = "cloudtwin.__main__:main"
cloudtwin-cli = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudtwin", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvicorn.*",
]


[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true
exclude = '''
/(\.venv|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cloudtwin"]
src_paths = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["**/.venv/**", "build", "dist", ".ruff_cache"]


[tool.pre-commit]
repos = [
    { repo = "https://github.com/psf/black", rev = "24.1.0", hooks = [ { id = "black" } ] },
    { repo = "https://github.com/pycqa/isort", rev = "5.12.0", hooks = [ { id = "isort" } ] },
    { repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "0.20.0", hooks = [ { id = "ruff" } ] },
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.5.0", hooks = [ { id = "trailing-whitespace" }, { id = "end-of-file-fixer" }, { id = "check-yaml" }, { id = "check-added-large-files" } ] },
    { repo = "local", hooks = [ { id = "cargo-fmt", name = "cargo fmt", entry = "cargo fmt --all", language = "system", files = "^rust/|^src/" }, { id = "cargo-clippy", name = "cargo clippy", entry = "cargo clippy --all-targets --all-features -- -D warnings", language = "system", files = "^rust/" } ] }
]
