[package]
name        = "cloudtwin-lite"
version     = "0.2.0"
edition     = "2021"
description = "CloudTwin Lite — lightweight multi-cloud local runtime built in Rust"

[[bin]]
name = "cloudtwin-lite"
path = "src/main.rs"

[dependencies]
# HTTP server
axum             = { version = "0.7", features = ["macros"] }
tokio            = { version = "1",   features = ["full"] }
tower-http       = { version = "0.5", features = ["cors", "trace"] }
tower            = "0.4"

# SQLite (bundled = statically linked, no system libsqlite3 needed)
rusqlite         = { version = "0.31", features = ["bundled"] }
tokio-rusqlite   = "0.5"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_urlencoded = "0.7"

# Utilities
uuid             = { version = "1", features = ["v4"] }
chrono           = "0.4"
bytes            = "1"
md-5             = "0.10"
hex              = "0.4"
base64           = "0.22"
anyhow           = "1"

# Logging
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "fmt"] }
